Bug 458198 - Increasing the tab limit has no effect
Summary: Increasing the tab limit has no effect
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-23 09:12 UTC by popov895
Modified: 2022-08-26 15:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The number of visible tabs doesn't match the number of open documents (620.14 KB, image/png)
2022-08-23 09:12 UTC, popov895
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2022-08-23 09:12:32 UTC
Created attachment 151517 [details]
The number of visible tabs doesn't match the number of open documents

SUMMARY

Increasing the tab limit doesn't increase the number of visible tabs.

STEPS TO REPRODUCE

1. Create or open 10 documents
2. Change the tab limit to 3 (go to "Settings" > "Behavior" and change "Limit number of tabs" to 3): now only 3 tabs will be visible
3. Change the tab limit to 10 (or more): still only 3 tabs will be displayed

SOFTWARE/OS VERSIONS

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.5
Graphics Platform: X11
Comment 1 Christoph Cullmann 2022-08-23 09:20:39 UTC
The settings works as intended, if you use again documents that not already have tabs, the limit will be honored.
I see no point in wasting time to start to populate the tab bar with maximum number on tabs after one alters this to a higher limit.

If you want to improve on this, feel free to submit some bug.
But I see no error here.
Comment 2 popov895 2022-08-23 11:48:37 UTC
(In reply to Christoph Cullmann from comment #1)
> If you want to improve on this, feel free to submit some bug.

Did you mean submit a merge request?
Comment 3 popov895 2022-08-26 15:32:51 UTC
Git commit 67a88a4d35669f6aed01f45796fb9feb54d176f7 by Eugene Popov.
Committed on 26/08/2022 at 14:39.
Pushed by cullmann into branch 'master'.

Handle an increase in tab limit

Currently, increasing the tab limit has no effect. This MR makes it open the N most recently used documents, that are hidden, instead.

M  +17   -0    apps/lib/katetabbar.cpp

https://invent.kde.org/utilities/kate/commit/67a88a4d35669f6aed01f45796fb9feb54d176f7