Handle an increase in tab limit

Currently, increasing the tab limit has no effect. This MR makes it open the N most recently used documents, that are hidden, instead.

BUG: 458198